mail sending functionality added

--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "type": "project",
     "require": {
         "php": "^8.0",
-        "larapack/dd": "^1.1"
+        "larapack/dd": "^1.1",
+        "phpmailer/phpmailer": "^6.7"
     },
     "license": "MIT",
     "autoload": {
